<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_home"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_home_item_bg"
    android:layout_marginHorizontal="25dp"
    android:layout_marginBottom="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hour_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/card_hour_text_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/hour_text"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8sp"
            android:hint="@string/now_playing"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/first_opponent"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vs_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_opponent_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/opp_one"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/first_opponent"
        app:layout_constraintStart_toStartOf="@+id/first_opponent"
        app:layout_constraintTop_toBottomOf="@+id/first_opponent" />

    <TextView
        android:id="@+id/vs_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/vs"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/second_opponent"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vs_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second_opponent_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/opp_sec"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/second_opponent"
        app:layout_constraintStart_toStartOf="@+id/second_opponent"
        app:layout_constraintTop_toBottomOf="@+id/second_opponent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_opponent_name"/>

    <ImageView
        android:id="@+id/league_image"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="15dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <TextView
        android:id="@+id/text_league_serie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/white"
        android:layout_marginStart="8dp"
        android:textColorHint="@color/white"
        android:hint="@string/league_serie"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/league_image"
        app:layout_constraintStart_toEndOf="@+id/league_image"
        app:layout_constraintTop_toTopOf="@+id/league_image" />

</androidx.constraintlayout.widget.ConstraintLayout>