<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main_color"
    tools:context=".presentation.ui.MatchDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bg_main_color"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ImageView
        android:id="@+id/first_opponent"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/vs_text"
        app:layout_constraintEnd_toStartOf="@+id/vs_text"
        app:layout_constraintTop_toTopOf="@+id/vs_text" />

    <TextView
        android:id="@+id/first_opponent_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/opp_one"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/first_opponent"
        app:layout_constraintStart_toStartOf="@+id/first_opponent"
        app:layout_constraintTop_toBottomOf="@+id/first_opponent" />

    <TextView
        android:id="@+id/vs_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/vs"
        android:layout_marginTop="100dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/second_opponent"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/vs_text"
        app:layout_constraintStart_toEndOf="@+id/vs_text"
        app:layout_constraintTop_toTopOf="@+id/vs_text" />

    <TextView
        android:id="@+id/second_opponent_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/opp_sec"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/second_opponent"
        app:layout_constraintStart_toStartOf="@+id/second_opponent"
        app:layout_constraintTop_toBottomOf="@+id/second_opponent" />

    <TextView
        android:id="@+id/hour_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:visibility="gone"
        android:hint="@string/hour"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_opponent_name" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hour_match">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/teams_players"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <include
                android:id="@+id/one"
                layout="@layout/player_list_item"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/two"
                layout="@layout/player_list_item"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/one" />

            <include
                android:id="@+id/three"
                layout="@layout/player_list_item"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/two" />

            <include
                android:id="@+id/four"
                layout="@layout/player_list_item"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/three" />

            <include
                android:id="@+id/five"
                layout="@layout/player_list_item"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/four" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/prgBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>